--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "next": "latest",
@@ -14,6 +15,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
+    "eslint": "7.28.0",
+    "eslint-plugin-react": "7.24.0",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1"
   }
