--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "latest",
@@ -17,6 +18,7 @@
     "autoprefixer": "^10.0.4",
     "eslint": "7.28.0",
     "eslint-plugin-react": "7.24.0",
+    "husky": "6.0.0",
     "postcss": "^8.1.10",
     "tailwindcss": "^2.1.1"
   }
