--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
+    "jslint": "eslint .",
+    "csslint": "stylelint \"**/*.css\"",
+    "lint": "yarn jslint && yarn csslint",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -20,6 +22,8 @@
     "eslint-plugin-react": "7.24.0",
     "husky": "6.0.0",
     "postcss": "^8.1.10",
+    "stylelint": "13.13.1",
+    "stylelint-config-standard": "22.0.0",
     "tailwindcss": "^2.1.1"
   }
 }
