--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "11.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.4",
-    "eslint": "7.28.0",
+    "eslint": "7.30.0",
     "eslint-plugin-react": "7.24.0",
-    "husky": "6.0.0",
-    "postcss": "^8.1.10",
+    "husky": "7.0.1",
+    "postcss": "^8.3.5",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
-    "tailwindcss": "^2.1.1"
+    "tailwindcss": "^2.2.4"
   }
 }
