--- a/package.json
+++ b/package.json
@@ -7,25 +7,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "jslint": "eslint .",
-    "csslint": "stylelint \"**/*.css\"",
-    "lint": "yarn jslint && yarn csslint",
+    "csslint": "npx stylelint \"**/*.css\"",
+    "lint": "next lint && yarn csslint",
     "prepare": "husky install"
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.5.0",
     "headlessui": "^0.0.0",
     "next": "12.2.3",
+    "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "eslint": "8.20.0",
+    "eslint-config-next": "12.2.3",
     "eslint-plugin-react": "7.30.1",
     "husky": "8.0.1",
     "postcss": "^8.4.14",
-    "stylelint": "14.9.1",
-    "stylelint-config-standard": "26.0.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
     "tailwindcss": "^3.1.7"
   }
 }
