Added prettify to husky pre-push hook

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "csslint": "npx stylelint \"**/*.css\"",
+    "prettify": "npx prettier --write .",
     "lint": "tsc --noEmit && next lint --fix && yarn csslint",
     "prepare": "husky install"
   },
