--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.0.0-rc.10",
     "eslint-config-prettier": "^8.5.0",
     "headlessui": "^0.0.0",
     "next": "12.3.0",
