--- a/package.json
+++ b/package.json
@@ -8,19 +8,25 @@
     "build": "next build",
     "start": "next start",
     "csslint": "npx stylelint \"**/*.css\"",
-    "prettify": "npx prettier --write .",
+    "prettify": "npx prettier --write --loglevel silent .",
     "lint": "tsc --noEmit && next lint --fix && yarn csslint",
+    "test": "jest",
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.2",
     "@supabase/supabase-js": "^2.0.0-rc.10",
+    "date-fns": "^2.29.3",
     "eslint-config-prettier": "^8.5.0",
-    "headlessui": "^0.0.0",
+    "lodash": "^4.17.21",
+    "marked": "^4.1.0",
     "next": "12.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.7",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.20",
     "autoprefixer": "^10.4.11",
@@ -28,9 +34,11 @@
     "eslint-config-next": "12.3.0",
     "eslint-plugin-react": "7.31.8",
     "husky": "8.0.1",
+    "jest": "^29.0.3",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "^28.0.0",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.3"
