--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
-    "@supabase/supabase-js": "^2.0.0-rc.10",
+    "@headlessui/react": "^1.7.7",
+    "@supabase/supabase-js": "^2.4.0",
     "date-fns": "^2.29.3",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.6.0",
     "lodash": "^4.17.21",
-    "marked": "^4.1.0",
-    "next": "12.3.0",
+    "marked": "^4.2.12",
+    "next": "13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
-    "@types/marked": "^4.0.7",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.20",
-    "autoprefixer": "^10.4.11",
-    "eslint": "8.23.1",
-    "eslint-config-next": "12.3.0",
-    "eslint-plugin-react": "7.31.8",
-    "husky": "8.0.1",
-    "jest": "^29.0.3",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "stylelint": "^14.11.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard": "^28.0.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.8.3"
+    "@types/marked": "^4.0.8",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.31.0",
+    "eslint-config-next": "13.1.2",
+    "eslint-plugin-react": "7.32.0",
+    "husky": "8.0.3",
+    "jest": "^29.3.1",
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "stylelint": "^14.16.1",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard": "^29.0.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
