--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^13.4.0",
     "@types/marked": "^4.0.8",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
@@ -37,6 +38,7 @@
     "jest": "^29.3.1",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "stylelint": "^14.16.1",
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard": "^29.0.0",
