--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.7",
-    "@supabase/supabase-js": "^2.4.0",
+    "@headlessui/react": "^1.7.10",
+    "@supabase/supabase-js": "^2.7.1",
     "date-fns": "^2.29.3",
     "eslint-config-prettier": "^8.6.0",
     "lodash": "^4.17.21",
     "marked": "^4.2.12",
-    "next": "13.1.2",
+    "next": "13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1"
@@ -28,21 +28,24 @@
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
     "@types/marked": "^4.0.8",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
     "autoprefixer": "^10.4.13",
-    "eslint": "8.31.0",
-    "eslint-config-next": "13.1.2",
-    "eslint-plugin-react": "7.32.0",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "eslint-plugin-react": "7.32.2",
     "husky": "8.0.3",
-    "jest": "^29.3.1",
+    "jest": "^29.4.2",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "stylelint": "^14.16.1",
-    "stylelint-config-prettier": "^9.0.4",
-    "stylelint-config-standard": "^29.0.0",
-    "tailwindcss": "^3.2.4",
-    "typescript": "^4.9.4"
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
+    "stylelint": "^15.1.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard": "^30.0.1",
+    "tailwindcss": "^3.2.6",
+    "typescript": "^4.9.5"
+  },
+  "volta": {
+    "node": "18.14.0"
   }
 }
