--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,6 +1,12 @@
 {
   "extends": "stylelint-config-standard",
   "rules": {
+    "function-no-unknown": [
+      true,
+      {
+        "ignoreFunctions": ["theme"]
+      }
+    ],
     "at-rule-no-unknown": [
       true,
       {
