--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint": "^15.10.1",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-standard": "^34.0.0",
+    "supabase": "^1.77.9",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
