--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^2.30.0",
     "eslint-config-prettier": "^8.8.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.262.0",
     "marked": "^5.1.1",
     "next": "13.4.10",
     "react": "^18.2.0",
