--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --loglevel silent .",
-    "lint": "tsc --noEmit && next lint --fix && yarn csslint",
+    "lint": "tsc --noEmit && next lint --fix && bun csslint",
     "test": "jest",
     "prepare": "husky install"
   },
@@ -57,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "supabase": "^1.77.9",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.21.4"
@@ -77,11 +78,7 @@
     "prettier-plugin-tailwindcss": "^0.4.1",
     "stylelint": "^15.10.1",
     "stylelint-config-standard": "^34.0.0",
-    "supabase": "^1.77.9",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
-  },
-  "volta": {
-    "node": "18.14.0"
   }
 }
