--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "start": "next start",
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
-    "lint": "tsc --noEmit && next lint --fix && bun csslint",
+    "lint": "tsc --noEmit && next lint --fix && pnpm csslint --fix",
     "test": "jest",
-    "prepare": "husky install",
     "gen-types": "supabase gen types typescript --linked --schema public > ./types/supabase.ts"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -44,45 +43,51 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-helpers-react": "^0.4.2",
-    "@supabase/supabase-js": "^2.39.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.43.5",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
-    "date-fns": "^2.30.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.1.5",
     "eslint-config-prettier": "^9.1.0",
+    "input-otp": "^1.2.4",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.294.0",
-    "marked": "^11.0.0",
-    "next": "14.0.3",
-    "react": "^18.2.0",
-    "react-day-picker": "^8.9.1",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.48.2",
-    "react-icons": "^4.12.0",
-    "supabase": "^1.115.4",
-    "tailwind-merge": "^2.1.0",
+    "lucide-react": "^0.395.0",
+    "marked": "^13.0.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-icons": "^5.2.1",
+    "react-resizable-panels": "^2.0.19",
+    "sonner": "^1.5.0",
+    "supabase": "^1.176.10",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "vaul": "^0.9.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@testing-library/react": "^14.1.2",
     "@types/marked": "^5.0.2",
-    "@types/node": "^20.10.3",
-    "@types/react": "^18.2.42",
-    "autoprefixer": "^10.4.16",
+    "@types/node": "^20.14.5",
+    "@types/react": "^18.3.3",
+    "autoprefixer": "^10.4.19",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.3",
-    "eslint-plugin-react": "7.33.2",
-    "husky": "8.0.3",
+    "eslint-config-next": "14.2.4",
+    "eslint-plugin-react": "7.34.3",
+    "husky": "9.0.11",
     "jest": "^29.7.0",
-    "postcss": "^8.4.32",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.8",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard": "^34.0.0",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^5.3.2"
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard": "^36.0.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   }
 }
