--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "project-template",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "repository": "github:carlesandres/project-template-supabase",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "bun run --bun next dev",
+    "build": "bun run --bun next build",
+    "start": "bun run --bun next start",
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
-    "lint": "tsc --noEmit && next lint --fix && pnpm csslint --fix",
+    "lint": "tsc --noEmit && next lint --fix && bun csslint --fix",
     "test": "jest",
     "gen-types": "supabase gen types typescript --linked --schema public > ./types/supabase.ts"
   },
@@ -45,14 +45,14 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/supabase-js": "^2.43.5",
+    "@supabase/supabase-js": "^2.89.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.1.5",
+    "embla-carousel-react": "^8.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "input-otp": "^1.2.4",
+    "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "marked": "^13.0.0",
@@ -61,8 +61,8 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.52.0",
-    "react-icons": "^5.2.1",
+    "react-hook-form": "^7.70.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.0.19",
     "sonner": "^1.5.0",
     "supabase": "^1.176.10",
@@ -76,18 +76,18 @@
     "@types/marked": "^5.0.2",
     "@types/node": "^20.14.5",
     "@types/react": "^18.3.3",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.23",
     "eslint": "8.55.0",
     "eslint-config-next": "14.2.4",
-    "eslint-plugin-react": "7.34.3",
-    "husky": "9.0.11",
+    "eslint-plugin-react": "7.37.5",
+    "husky": "9.1.7",
     "jest": "^29.7.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
+    "postcss": "^8.5.6",
+    "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.26.1",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.3"
   }
 }
