--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "bun run --bun next start",
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
-    "lint": "tsc --noEmit && next lint --fix && bun csslint --fix",
+    "lint": "tsc --noEmit && eslint --fix . && bun csslint --fix",
     "test": "jest",
     "gen-types": "supabase gen types typescript --linked --schema public > ./types/supabase.ts"
   },
@@ -56,11 +56,11 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
     "marked": "^13.0.0",
-    "next": "14.2.4",
+    "next": "16.1.1",
     "next-themes": "^0.3.0",
-    "react": "^18.3.1",
+    "react": "19.2.3",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.70.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.0.19",
@@ -75,10 +75,10 @@
     "@testing-library/react": "^14.1.2",
     "@types/marked": "^5.0.2",
     "@types/node": "^20.14.5",
-    "@types/react": "^18.3.3",
+    "@types/react": "19.2.7",
     "autoprefixer": "^10.4.23",
-    "eslint": "8.55.0",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.1",
     "eslint-plugin-react": "7.37.5",
     "husky": "9.1.7",
     "jest": "^29.7.0",
@@ -89,5 +89,8 @@
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "@types/react": "19.2.7"
   }
 }
