--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@tanstack/react-query": "5.90.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -72,6 +73,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "5.91.2",
     "@testing-library/react": "^14.1.2",
     "@types/marked": "^5.0.2",
     "@types/node": "^20.14.5",
