--- a/package.json
+++ b/package.json
@@ -74,7 +74,9 @@
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "5.91.2",
+    "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "^14.1.2",
+    "@types/jest": "30.0.0",
     "@types/marked": "^5.0.2",
     "@types/node": "^20.14.5",
     "@types/react": "19.2.7",
@@ -84,6 +86,7 @@
     "eslint-plugin-react": "7.37.5",
     "husky": "9.1.7",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "30.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
