--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "eslint-config-prettier": "^9.1.0",
+    "immer": "11.1.3",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.395.0",
@@ -70,7 +71,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "5.0.9"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "5.91.2",
