--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
     "lint": "tsc --noEmit && eslint --fix . && bun csslint --fix",
-    "test": "jest",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "gen-types": "supabase gen types typescript --linked --schema public > ./types/supabase.ts"
   },
   "dependencies": {
@@ -78,24 +81,25 @@
     "@tanstack/react-query-devtools": "5.91.2",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "^14.1.2",
-    "@types/jest": "30.0.0",
     "@types/marked": "^5.0.2",
     "@types/node": "^20.14.5",
     "@types/react": "19.2.7",
+    "@vitest/coverage-v8": "4.0.17",
+    "@vitest/ui": "4.0.17",
     "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-plugin-react": "7.37.5",
     "husky": "9.1.7",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "30.2.0",
+    "jsdom": "27.4.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "stylelint": "^16.26.1",
     "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "4.0.17"
   },
   "overrides": {
     "@types/react": "19.2.7"
