--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "dev": "bun run --bun next dev",
     "build": "bun run --bun next build",
     "start": "bun run --bun next start",
-    "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
-    "lint": "tsc --noEmit && eslint --fix . && bun csslint --fix",
+    "lint": "tsc --noEmit && eslint --fix .",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -95,8 +94,6 @@
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "stylelint": "^16.26.1",
-    "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.9.3",
     "vitest": "4.0.17"
