--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "bun run --bun next start",
     "csslint": "npx stylelint \"**/*.css\"",
     "prettify": "npx prettier --write --log-level silent .",
-    "lint": "tsc --noEmit && eslint --fix . && bun csslint --fix",
+    "lint": "tsc --noEmit && oxlint --tsconfig tsconfig.json --fix . && bun csslint --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -55,7 +55,6 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
-    "eslint-config-prettier": "^9.1.0",
     "immer": "11.1.3",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
@@ -87,11 +86,9 @@
     "@vitest/coverage-v8": "4.0.17",
     "@vitest/ui": "4.0.17",
     "autoprefixer": "^10.4.23",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
-    "eslint-plugin-react": "7.37.5",
     "husky": "9.1.7",
     "jsdom": "27.4.0",
+    "oxlint": "1.39.0",
     "postcss": "^8.5.6",
     "prettier": "^3.7.4",
     "prettier-plugin-tailwindcss": "^0.6.5",
